--- a/index.html
+++ b/index.html
@@ -8,15 +8,7 @@
 </head>
 
 <body>
-    <h1>Helllo</h1>
-    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur consectetur dolores dolorem ullam vitae ex?
-        Et fugit aliquam nesciunt accusantium quia id recusandae nihil, eius sapiente sed. Debitis, repudiandae
-        officiis?</h2>
-    <H3>FDSFDSAFDSA</H3>
-    <h2>fdsafdsafdsa</h2>
-    <h3>fdsafdsafda</h3>
-    <h4>fdsafdsa</h4>
-    <h5>fdsfdsafdsa</h5>
+    <h1>Hello</h1>
 </body>
 
 </html>
